Prodeti.web - zruseni sekce Lektori, zmena kontaktu, zmena textu

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -92,7 +92,7 @@
         <div
           class="basic-info_box basic-info_box_icons basic-info_box_calendar mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h2>4&nbsp;týdny</h2>
-          <p>celý kurz trvá 4&nbsp;týdny</p>
+          <p>4&nbsp;setkání v&nbsp;měsíci</p>
         </div>
         <div
           class="basic-info_box basic-info_box_icons basic-info_box_capacity mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
@@ -182,7 +182,7 @@
       </div>
     </div>
   </section>
-  <section id="lektori" class="teachers">
+ <!-- <section id="lektori" class="teachers">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div
@@ -213,7 +213,7 @@
       </div>
     </div>
     </div>
-  </section>
+  </section>-->
 
   <section id="galerie" class="gallery">
     <div class="mdc-layout-grid">
@@ -520,9 +520,12 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Kontakt</h2>
           <p class="description">Přejete si objednat kurz do své firmy? Máte otázky? Napište&nbsp;nám.</p>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
+            <img alt="[foto] David Zábrž" src="https://insight.topmonks.com/avatar/david-zabrz" onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="84" height="84">
+          </div>
           <div style="margin: 0 auto; text-align: center">
-            <a class="mail" href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a><br>
-            <a href="tel:732364404">+420 732 364 404</a>
+            <a class="mail" href="mailto:david.zabrz&#64;topmonks.com">david.zabrz@topmonks.com</a><br>
+            <a href="tel:608300939">+420 608 300 939</a>
           </div>
         </div>
       </div>
