--- a/www.hookahmonk.com/src/html/index.html
+++ b/www.hookahmonk.com/src/html/index.html
@@ -465,9 +465,78 @@
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Revoluce</h2>
+      <p>Comming Soon 2019</p>
+    </div>
+    <div
+      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
+      <img
+        src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_538,w_830/v1543743134/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.14.png"
+        alt="Fotka vodní dýmky a tabáku k sekci Revoluce">
+    </div>
+    <div
+      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+      <p class="revolution_text">Lorem ipsum dolor sit amet, consectetuer.</p>
+      <p class="revolution_text">Lorem ipsum dolor sit amet, consectetuer.</p>
+      <p class="revolution_text">Lorem ipsum dolor sit amet, consectetuer.</p>
+      <p class="revolution_text">Lorem ipsum dolor sit amet, consectetuer.</p>
     </div>
   </div>
 </section>
+<section id="products">
+  <div class="mdc-layout-grid__inner">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <h2>Produkty</h2>
+      <h3>Classic Heat Management</h3>
+    </div>
+    <div
+      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
+      <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h4>
+      <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies odio,
+        vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id turpis.</p>
+    </div>
+    <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <a href="" class="button">Detail</a>
+    </div>
+    <div
+      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-8-desktop">
+      <img
+        src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_585,w_710/v1543743757/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.43.png"
+        alt="Fotka vodní dýmky k sekci Produkty">
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <h3>Vodní dýmka</h3>
+    </div>
+    <div
+      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
+      <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h4>
+      <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies odio,
+        vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id turpis.</p>
+    </div>
+    <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <a href="" class="button">Detail</a>
+    </div>
+    <div
+      class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-8-desktop">
+      <img
+        src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_583,w_710/v1543744271/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.48.png"
+        alt="Fotka vodní dýmky k sekci Produkty">
+    </div>
+  </div>
+</section>
+<section id="services">
+  <div class="mdc-layout-grid__inner">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <h2>Naše služby</h2>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <h3>Catering</h3>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <h3>Spoty</h3>
+    </div>
+  </div>
+</section>
+
 
 </body>
 
