--- a/www.hookahmonk.com/src/html/index.html
+++ b/www.hookahmonk.com/src/html/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="stylesheet" href="/stylesheets/main.scss">
+  <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 
 <body>
@@ -446,10 +446,10 @@
   </div>
 </header>
 <section id="main">
-  <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h1>Hookamonk<br> unique heating management</h1>
+        <h1><b>Hookamonk</b><br>unique heating management</h1>
       </div>
       <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="" class="button">Více informací</a>
@@ -458,7 +458,7 @@
   </div>
 </section>
 <section id="introduction-video">
-  <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       </div>
@@ -466,7 +466,7 @@
   </div>
 </section>
 <section id="revolution">
-  <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Revoluce</h2>
@@ -489,7 +489,7 @@
   </div>
 </section>
 <section id="products">
-  <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Produkty</h2>
@@ -536,7 +536,7 @@
   </div>
 </section>
 <section id="services">
-  <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Naše služby</h2>
@@ -554,9 +554,9 @@
 </section>
 
 <footer>
-  <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <svg width="219" height="57" viewBox="0 0 219 57" fill="none" xmlns="http://www.w3.org/2000/svg">
           <title>HookaMonk logo</title>
           <path
