--- a/www.hookahmonk.com/src/html/index.html
+++ b/www.hookahmonk.com/src/html/index.html
@@ -496,15 +496,17 @@
         <h3>Classic Heat Management</h3>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="products_text products_text_management mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
         <p class="text-bold">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
         <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
           odio,
           vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id
           turpis.</p>
+      <div class="mdc-layout-grid__inner">
+        <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <a href="" class="button">Detail</a>
+        </div>
       </div>
-      <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="" class="button">Detail</a>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-8-desktop">
@@ -512,25 +514,27 @@
           src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_585,w_710/v1543743757/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.43.png"
           alt="Fotka vodní dýmky k sekci Produkty">
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="products_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h3>Vodní dýmka</h3>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
-        <p class="text-bold">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
-          odio,
-          vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id
-          turpis.</p>
-      </div>
-      <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="" class="button">Detail</a>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-8-desktop">
         <img
           src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_583,w_710/v1543744271/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.48.png"
           alt="Fotka vodní dýmky k sekci Produkty">
+      </div>
+      <div
+        class="products_text products_text_pipe mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
+        <p class="text-bold">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+        <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
+          odio,
+          vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id
+          turpis.</p>
+        <div class="mdc-layout-grid__inner">
+      <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="" class="button">Detail</a>
+      </div>
+        </div>
       </div>
     </div>
   </div>
