--- a/www.hookahmonk.com/src/html/index.html
+++ b/www.hookahmonk.com/src/html/index.html
@@ -502,11 +502,11 @@
           odio,
           vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id
           turpis.</p>
-      <div class="mdc-layout-grid__inner">
-        <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="" class="button">Detail</a>
+        <div class="mdc-layout-grid__inner">
+          <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <a href="" class="button">Detail</a>
+          </div>
         </div>
-      </div>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-8-desktop">
@@ -531,9 +531,9 @@
           vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id
           turpis.</p>
         <div class="mdc-layout-grid__inner">
-      <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="" class="button">Detail</a>
-      </div>
+          <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <a href="" class="button">Detail</a>
+          </div>
         </div>
       </div>
     </div>
@@ -552,6 +552,15 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Spoty</h3>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <p>Během měsíce děláme přes</p>
+        <p class="services_offer">2 000 dýmek</p>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <p>Jsme na trhu přes</p>
+        <p class="services_offer">8 let</p>
       </div>
     </div>
   </div>
