--- a/www.hookahmonk.com/src/html/index.html
+++ b/www.hookahmonk.com/src/html/index.html
@@ -473,13 +473,13 @@
         <p class="sub-text">Comming Soon 2019</p>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_538,w_830/v1543743134/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.14.png"
+          src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_538,w_830/v1544001067/hookamonk.com/revoluce-img.png"
           alt="Fotka vodní dýmky a tabáku k sekci Revoluce">
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="revolution_side-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <p class="revolution_text">Lorem ipsum dolor sit amet, consectetuer.</p>
         <p class="revolution_text">Lorem ipsum dolor sit amet, consectetuer.</p>
         <p class="revolution_text">Lorem ipsum dolor sit amet, consectetuer.</p>
@@ -548,19 +548,31 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Catering</h3>
+        <div class="mdc-layout-grid__inner">
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          </div>
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          </div>
+        </div>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Spoty</h3>
+        <div class="mdc-layout-grid__inner">
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          </div>
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          </div>
+        </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="services_box serivces_box_info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <p>Během měsíce děláme přes</p>
-        <p class="services_offer">2 000 dýmek</p>
+        <p class="serivces_box_bold">2 000 dýmek</p>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="services_box serivces_box_info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <p>Jsme na trhu přes</p>
-        <p class="services_offer">8 let</p>
+        <p class="serivces_box_bold">8 let</p>
       </div>
     </div>
   </div>
@@ -570,7 +582,7 @@
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <svg width="219" height="57" viewBox="0 0 219 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg width="140" height="36" viewBox="0 0 219 57" fill="none" xmlns="http://www.w3.org/2000/svg">
           <title>HookaMonk logo</title>
           <path
             d="M142.459 7.94934C142.408 7.94934 142.358 7.99997 142.358 8.05061C142.358 8.10124 142.408 8.15187 142.459 8.15187L144.128 8.3544L145.696 8.962L147.012 9.92402L148.024 11.2405L148.681 12.7595L149.035 14.3797L149.187 16.0506L149.238 17.7215C149.238 17.7721 149.288 17.8228 149.339 17.8228C149.389 17.8228 149.44 17.7721 149.44 17.7215L149.389 16.0506L149.238 14.3797L148.884 12.7088L148.226 11.1392L147.164 9.82276L145.798 8.8101L144.229 8.20251L142.459 7.94934Z"
@@ -979,7 +991,7 @@
             fill="#100906"/>
         </svg>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
         <h3>Adresa</h3>
         <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
           <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress"><span
@@ -988,7 +1000,7 @@
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
         <h3>Navigace</h3>
         <nav>
           <ul>
@@ -999,7 +1011,7 @@
           </ul>
         </nav>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
         <h3>Prozkoumat</h3>
         <nav>
           <ul>
