HookaMonk html + scss

--- a/www.hookahmonk.com/src/html/index.html
+++ b/www.hookahmonk.com/src/html/index.html
@@ -14,7 +14,7 @@
 <header>
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
         <svg width="219" height="57" viewBox="0 0 219 57" fill="none" xmlns="http://www.w3.org/2000/svg">
           <title>HookaMonk logo</title>
           <path
@@ -424,7 +424,7 @@
             fill="#100906"/>
         </svg>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="navigation-menu">
           <ul class="menu">
             <li>
@@ -496,7 +496,7 @@
         <h3>Classic Heat Management</h3>
       </div>
       <div
-        class="products_text products_text_management mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="products_text products_text_management mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <p class="text-bold">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
         <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
           odio,
@@ -509,7 +509,7 @@
         </div>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-8-desktop">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
         <img
           src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_585,w_710/v1543743757/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.43.png"
           alt="Fotka vodní dýmky k sekci Produkty">
@@ -518,13 +518,13 @@
         <h3>Vodní dýmka</h3>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-8-desktop">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
         <img
           src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_583,w_710/v1543744271/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.48.png"
           alt="Fotka vodní dýmky k sekci Produkty">
       </div>
       <div
-        class="products_text products_text_pipe mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="products_text products_text_pipe mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <p class="text-bold">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
         <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
           odio,
@@ -549,9 +549,9 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Catering</h3>
         <div class="mdc-layout-grid__inner">
-          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           </div>
-          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           </div>
         </div>
       </div>
@@ -559,13 +559,14 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Spoty</h3>
         <div class="mdc-layout-grid__inner">
-          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           </div>
-          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="services_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           </div>
         </div>
       </div>
-      <div class="services_box serivces_box_info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div
+        class="services_box serivces_box_info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <p>Během měsíce děláme přes</p>
         <p class="serivces_box_bold">2 000 dýmek</p>
       </div>
@@ -991,7 +992,7 @@
             fill="#100906"/>
         </svg>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
         <h3>Adresa</h3>
         <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
           <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress"><span
@@ -1000,7 +1001,7 @@
           </div>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
         <h3>Navigace</h3>
         <nav>
           <ul>
@@ -1011,7 +1012,7 @@
           </ul>
         </nav>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
         <h3>Prozkoumat</h3>
         <nav>
           <ul>
@@ -1021,7 +1022,32 @@
           </ul>
         </nav>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="footer_social-section mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__inner">
+          <div class="social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+              <a href="" title="HookaMonk on Facebook" rel="me" itemprop="sameAs"
+                 class="facebook">
+                <svg width="10" height="21" viewBox="0 0 10 21" fill="none" xmlns="http://www.w3.org/2000/svg"><title>[icon] Facebook</title>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M6.30257 20.641H2.10028V10.3192H0V6.76263H2.10028V4.62718C2.10028 1.72622 3.28506 0 6.65456 0H9.45882V3.55788H7.70621C6.39477 3.55788 6.30774 4.05462 6.30774 4.98256L6.30214 6.76263H9.4782L9.1064 10.3192H6.30214V20.641H6.30257Z" fill="black"/>
+                </svg>
+              </a>
+              <a href="" title="HookaMonk on Twitter" rel="me" itemprop="sameAs"
+                 class="twitter">
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg"><title>[icon] Twitter</title>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M15.9646 2.88715C16.7315 2.38324 17.32 1.58407 17.5961 0.632342C16.878 1.09991 16.0848 1.43824 15.2382 1.62132C14.5627 0.827983 13.5972 0.333496 12.5288 0.333496C10.4789 0.333496 8.81804 2.15933 8.81804 4.411C8.81804 4.73093 8.84863 5.04234 8.91239 5.33984C5.8281 5.16933 3.0932 3.54766 1.26133 1.07882C0.941652 1.68324 0.758982 2.38324 0.758982 3.12991C0.758982 4.54427 1.41427 5.7926 2.41034 6.52491C1.80201 6.50427 1.22945 6.3185 0.727962 6.01516V6.06542C0.727962 8.04157 2.00666 9.69016 3.70713 10.0635C3.39478 10.1591 3.06779 10.2071 2.72786 10.2071C2.48918 10.2071 2.25525 10.1824 2.03035 10.1348C2.50168 11.7543 3.873 12.9348 5.49808 12.9663C4.22671 14.0607 2.62619 14.7118 0.887368 14.7118C0.587943 14.7118 0.291534 14.6943 0.00158691 14.6557C1.64476 15.812 3.59555 16.4873 5.69239 16.4873C12.5214 16.4873 16.2537 10.2735 16.2537 4.88484C16.2537 4.7076 16.2515 4.53125 16.2442 4.3576C16.9693 3.78234 17.6005 3.0635 18.0963 2.24548C17.4303 2.56991 16.7147 2.78933 15.9646 2.88715Z" fill="black"/>
+                </svg>
+              </a>
+              <a href="" title="HookaMonk on Instagram" rel="me" itemprop="sameAs"
+                 class="instagram">
+                <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg"><title>[icon] Instagram</title>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M10.098 2.22745C12.6286 2.22745 12.9285 2.23732 13.928 2.28488C14.8521 2.32886 15.354 2.48995 15.6879 2.62501C16.1304 2.80405 16.4462 3.01809 16.7779 3.36315C17.1092 3.70867 17.3147 4.03758 17.4866 4.49841C17.6163 4.84617 17.771 5.36892 17.8132 6.33142C17.8589 7.37245 17.8684 7.68476 17.8684 10.3205C17.8684 12.9563 17.8589 13.2686 17.8132 14.3096C17.771 15.2721 17.6163 15.7949 17.4866 16.1426C17.3147 16.6035 17.1092 16.9324 16.7779 17.2779C16.4462 17.623 16.1304 17.837 15.6879 18.016C15.354 18.1516 14.8521 18.3122 13.928 18.3562C12.9285 18.4037 12.6291 18.4136 10.098 18.4136C7.56684 18.4136 7.26742 18.4037 6.2679 18.3562C5.34377 18.3122 4.84186 18.1516 4.50797 18.016C4.06551 17.837 3.74971 17.623 3.41797 17.2779C3.08667 16.9324 2.88116 16.6035 2.70926 16.1426C2.57915 15.7949 2.42492 15.2721 2.3827 14.3096C2.33703 13.2686 2.32755 12.9563 2.32755 10.3205C2.32755 7.68476 2.33703 7.37245 2.3827 6.33142C2.42492 5.36892 2.57915 4.84617 2.70926 4.49841C2.88116 4.03758 3.08667 3.70867 3.41797 3.36315C3.74971 3.01809 4.06551 2.80405 4.50797 2.62501C4.84186 2.48995 5.34377 2.32886 6.2679 2.28488C7.26742 2.23732 7.56727 2.22745 10.098 2.22745ZM10.098 0.44873C7.52376 0.44873 7.20107 0.459948 6.18992 0.507961C5.18135 0.555974 4.49246 0.722897 3.8893 0.967C3.26589 1.21918 2.73727 1.55662 2.21037 2.1054C1.68346 2.65463 1.35948 3.20476 1.11736 3.85405C0.882987 4.48226 0.722719 5.19976 0.67662 6.25021C0.630522 7.30335 0.619751 7.63944 0.619751 10.3205C0.619751 13.0016 0.630522 13.3377 0.67662 14.3908C0.722719 15.4413 0.882987 16.1588 1.11736 16.787C1.35948 17.4363 1.68346 17.9864 2.21037 18.5352C2.73727 19.0844 3.26589 19.4219 3.8893 19.6741C4.49246 19.9182 5.18135 20.0851 6.18992 20.1331C7.20107 20.1811 7.52376 20.1923 10.098 20.1923C12.6721 20.1923 12.9948 20.1811 14.0056 20.1331C15.0146 20.0851 15.7035 19.9182 16.3066 19.6741C16.93 19.4219 17.4582 19.0844 17.9851 18.5352C18.5124 17.9864 18.8364 17.4363 19.0786 16.787C19.3129 16.1588 19.4732 15.4413 19.5193 14.3908C19.5654 13.3377 19.5762 13.0016 19.5762 10.3205C19.5762 7.63944 19.5654 7.30335 19.5193 6.25021C19.4732 5.19976 19.3129 4.48226 19.0786 3.85405C18.8364 3.20476 18.5124 2.65463 17.9851 2.1054C17.4582 1.55662 16.93 1.21918 16.3066 0.967C15.7035 0.722897 15.0146 0.555974 14.0056 0.507961C12.9948 0.459948 12.6721 0.44873 10.098 0.44873ZM10.1169 5.26706C7.42682 5.26706 5.24598 7.53847 5.24598 10.3403C5.24598 13.1416 7.42682 15.413 10.1169 15.413C12.8066 15.413 14.9874 13.1416 14.9874 10.3403C14.9874 7.53847 12.8066 5.26706 10.1169 5.26706ZM10.1169 13.633C8.37077 13.633 6.95507 12.1589 6.95507 10.3403C6.95507 8.52162 8.37077 7.04713 10.1169 7.04713C11.8631 7.04713 13.2783 8.52162 13.2783 10.3403C13.2783 12.1589 11.8631 13.633 10.1169 13.633ZM16.2661 5.03194C16.2661 5.68123 15.7612 6.20713 15.1378 6.20713C14.5148 6.20713 14.0094 5.68123 14.0094 5.03194C14.0094 4.38309 14.5148 3.85674 15.1378 3.85674C15.7612 3.85674 16.2661 4.38309 16.2661 5.03194Z" fill="black"/>
+                </svg>
+              </a>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
+            <p>© Hookamonk 2018 All Rights Reserved.</p>
+          </div>
+        </div>
       </div>
 
     </div>
