--- a/www.hookahmonk.com/src/html/index.html
+++ b/www.hookahmonk.com/src/html/index.html
@@ -491,25 +491,25 @@
 <section id="products">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="order_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Produkty</h2>
         <h3>Classic Heat Management</h3>
       </div>
       <div
-        class="products_text products_text_management mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        class="products_text products_text_management order_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <p class="text-bold">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
         <p>In dapibus augue non sapien. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies
           odio,
           vitae placerat pede sem sit amet enim. Etiam bibendum elit eget erat. Pellentesque pretium lectus id
           turpis.</p>
         <div class="mdc-layout-grid__inner">
-          <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="button order_4 mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <a href="" class="button">Detail</a>
           </div>
         </div>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
+        class="order_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
         <img
           src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_585,w_710/v1543743757/hookamonk.com/Sni%CC%81mek_obrazovky_2018-11-20_v_16.43.png"
           alt="Fotka vodní dýmky k sekci Produkty">
