--- a/www.hookamonk.com/src/html/index.html
+++ b/www.hookamonk.com/src/html/index.html
@@ -473,7 +473,13 @@
         <p class="sub-text">Comming Soon 2019</p>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
+        class="revolution_img-desktop mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_538,w_830/v1544001067/hookamonk.com/revoluce-img.png"
+          alt="Fotka vodní dýmky a tabáku k sekci Revoluce">
+      </div>
+      <div
+        class="revolution_img-phone mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone">
         <img
           src="https://res.cloudinary.com/topmonks/image/upload/c_scale,h_538,w_830/v1544001067/hookamonk.com/revoluce-img.png"
           alt="Fotka vodní dýmky a tabáku k sekci Revoluce">
