Topmonks.com Contact

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -91,7 +91,8 @@
     height: 2px;
     border: none;
   }
-  .line-between{
+
+  .line-between {
     padding: 24px 0;
   }
 
@@ -114,6 +115,7 @@
     p.box_text-about {
       height: 90px;
     }
+
     #contacts-main .box img {
       margin: 2em 0 0;
     }
@@ -133,6 +135,7 @@
     p.box_text-about {
       height: 100px;
     }
+
     hr {
       width: 288px;
     }
@@ -309,10 +312,10 @@
         </a>
         <div class="content">
           <h3 itemprop="name">San Jose</h3>
-          <span itemprop="legalName"><b>TopMonks LLC</span>
+          <span itemprop="legalName">TopMonks LLC</span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress">2 North 1st St., 5th Floor</b></span><br>
+              <span itemprop="streetAddress">2 North 1st St., 5th Floor</span><br>
               <span itemprop="addressLocality">San Jose</span>,
               <span itemprop="addressRegion">CA</span>
               <span itemprop="postalCode">95136</span><br>
