Topmonks.com - contact, bold text

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -284,10 +284,10 @@
         </a>
         <div class="content">
           <h3 itemprop="name">Ostrava</h3>
-          <span itemprop="legalName"><b>TopMonks s.r.o.</span>
+          <span itemprop="legalName"><b>TopMonks s.r.o.</b></span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress">Sadová 1728/17</b></span><br>
+              <span itemprop="streetAddress"><b>Sadová 1728/17</b></span><br>
               <span itemprop="postalCode">702 00</span>
               <span itemprop="addressLocality">Ostrava</span><br>
               <span itemprop="addressCountry">Czech Republic</span>
@@ -312,10 +312,10 @@
         </a>
         <div class="content">
           <h3 itemprop="name">San Jose</h3>
-          <span itemprop="legalName">TopMonks LLC</span>
+          <span itemprop="legalName"><b>TopMonks LLC</b></span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress">2 North 1st St., 5th Floor</span><br>
+              <span itemprop="streetAddress"><b>2 North 1st St., 5th Floor</b></span><br>
               <span itemprop="addressLocality">San Jose</span>,
               <span itemprop="addressRegion">CA</span>
               <span itemprop="postalCode">95136</span><br>
@@ -339,12 +339,12 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>US Billing address</h3>
-        <span itemprop="legalName"><b>TopMonks INC.</span><br>
+        <span itemprop="legalName"><b>TopMonks INC.</b></span><br>
         <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
           <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-          <span itemprop="streetAddress">919 North Market Street, Suite 950 Wilmington</span><br>
-          <span itemprop="postalCode">New Castle, Delaware 19801</span><br>
-          <span itemprop="addressLocality">United States</b></span>
+            <span itemprop="streetAddress"><b>919 North Market Street, Suite 950 Wilmington</b></span><br>
+              <span itemprop="postalCode"><b>New Castle, Delaware 19801</b></span><br>
+          <span itemprop="addressLocality"><b>United States</b></span>
           </span>
         </span>
       </div>
