--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -47,13 +47,6 @@
     color: #ffffff;
   }
 
-  .contact-title p {
-    font-size: 24px;
-    color: var(--tm-contact-darkgrey);
-    text-align: center;
-    opacity: 0.7;
-  }
-
   .box-member {
     padding: 10px 28px;
   }
@@ -147,7 +140,7 @@
 <div itemscope itemtype="https://schema.org/Organization">
   <section id="contacts-main" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="contact-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Get In Touch</h2>
         <p>Whether you're a corporate, startup or candidate we would like to hear
           from&nbsp;you.</p>
