--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -171,8 +171,6 @@
         <h3><b>US Sales</b></h3>
         <p class="box_text-about">Jsme otevření novým příležitostem a zkušenostem i&nbsp;v&nbsp;USA. Pokud pro
           nás máte zajímavý projekt, kontaktujte Bereniku.</p>
-        <!-- <span itemprop="name">Anna Kovácsová</span>:
-        <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a><br>-->
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
             <img alt="[foto] Berenika Alexandre" src="https://insight.topmonks.com/avatar/berenika-alexandre"
@@ -209,18 +207,18 @@
       <div
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-        <h3><b>Happy Makers AKA HR</b></h3>
+        <h3><b>Happy Maker AKA HR</b></h3>
         <p class="box_text-about">Neustále se poohlížíme po nových talentovaných lidech, kteří souzní
           s&nbsp;naší kulturou. Zkontrolujte aktuálně <a href="https://www.topmonks.com/jobs">vypsané pozice</a> nebo se
-          ozvěte Elišce.</p>
+          ozvěte Aničce.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Eliška Monsportová" src="https://insight.topmonks.com/avatar/eliska"
+            <img alt="[foto] Anička Kovácsová" src="https://insight.topmonks.com/avatar/anna-kovacsova"
                  onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Eliška Monsportová</span><br>
-              <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724 390 424</a><br>
+            <p><span itemprop="name">Anička Kovácsová</span><br>
+              <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777 556 859</a><br>
               <a itemprop="email" href="mailto:happy&#64;topmonks.com">happy@topmonks.com</a></p>
           </div>
         </div>
