--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -236,9 +236,7 @@
            id="prague">
         <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Show Prague Office on map">
           <img alt="[mapa] Praha Spořilov"
-               src="https://maps.googleapis.com/maps/api/staticmap?center=Struhařovská+2931/9,Praha&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:blue%7Clabel:P%7C50.045386,14.491246&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc"
-               srcset="https://maps.googleapis.com/maps/api/staticmap?center=Struhařovská+2931/9,Praha&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:blue%7Clabel:P%7C50.045386,14.491246&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc 1x,
-                         https://maps.googleapis.com/maps/api/staticmap?center=Struhařovská+2931/9,Praha&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:blue%7Clabel:P%7C50.045386,14.491246&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc&amp;scale=2 2x"
+               src="https://res.cloudinary.com/topmonks/image/upload/v1544690850/topmonks.com/Contact/map_prague.png"
                width="100%">
         </a>
         <div class="content">
@@ -264,9 +262,7 @@
            id="ostrava">
         <a href="https://goo.gl/maps/SkoWqfoKgg12" class="map" title="Show Ostrava Office on map">
           <img alt="[mapa] Ostrava"
-               src="https://maps.googleapis.com/maps/api/staticmap?center=Sadová+1728/17,Ostrava&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:green%7Clabel:O%7C49.8454375,18.2892897&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc"
-               srcset="https://maps.googleapis.com/maps/api/staticmap?center=Sadová+1728/17,Ostrava&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:green%7Clabel:O%7C49.8454375,18.2892897&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc 1x,
-                         https://maps.googleapis.com/maps/api/staticmap?center=Sadová+1728/17,Ostrava&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:green%7Clabel:O%7C49.8454375,18.2892897&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc&amp;scale=2 2x"
+               src="https://res.cloudinary.com/topmonks/image/upload/v1544690834/topmonks.com/Contact/map_ostrava.png"
                width="100%">
         </a>
         <div class="content">
@@ -289,30 +285,28 @@
       </div>
       <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope=""
            itemtype="https://schema.org/Organization"
-           id="san-jose">
-        <a href="https://goo.gl/maps/YAJRUb1rDox" class="map" title="Show San Jose Office on map">
-          <img alt="[mapa] San Jose"
-               src="https://maps.googleapis.com/maps/api/staticmap?center=2+North+1st+St.,San+Jose,CA&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:red%7Clabel:S%7C37.336482,-121.8905285&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc"
-               srcset="https://maps.googleapis.com/maps/api/staticmap?center=2+North+1st+St.,San+Jose,CA&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:red%7Clabel:S%7C37.336482,-121.8905285&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc 1x,
-                         https://maps.googleapis.com/maps/api/staticmap?center=2+North+1st+St.,San+Jose,CA&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:red%7Clabel:S%7C37.336482,-121.8905285&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc&amp;scale=2 2x"
+           id="San Francisco">
+        <a href="https://goo.gl/maps/YAJRUb1rDox" class="map" title="Show San Francisco Office on map">
+          <img alt="[mapa] San Francisco"
+               src="https://res.cloudinary.com/topmonks/image/upload/v1544690861/topmonks.com/Contact/map_sanfrancisco.png"
                width="100%">
         </a>
         <div class="content">
-          <h3 itemprop="name">San Jose</h3>
-          <span itemprop="legalName">TopMonks LLC</span>
+          <h3 itemprop="name">San Francisco</h3>
+          <span itemprop="legalName"><b>TopMonks LLC</b></span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress">2 North 1st St., 5th Floor</span><br>
-              <span itemprop="addressLocality">San Jose</span>,
+              <span itemprop="streetAddress"><b>981 Mission St</b></span><br>
+              <span itemprop="addressLocality">San Francisco</span>,
               <span itemprop="addressRegion">CA</span>
-              <span itemprop="postalCode">95136</span><br>
+              <span itemprop="postalCode">94103</span><br>
               <span itemprop="addressCountry">United States</span>
             </div>
-            <a href="https://goo.gl/maps/YAJRUb1rDox" class="button" data-marker="san-jose">ukázat na mapě</a>
-            <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
+            <a href="https://goo.gl/maps/UXjifMwu2h42" class="button" data-marker="san-francisco">ukázat na mapě</a>
+          <!--  <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
               <meta itemprop="latitude" content="37.336482">
               <meta itemprop="longitude" content="-121.8905285">
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
