Contact - changed text - main title

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -141,7 +141,7 @@
   <section id="contacts-main" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Get In Touch</h2>
+        <h2>Get In Touch With Us</h2>
         <p>Whether you're a corporate, startup or candidate we would like to hear
           from&nbsp;you.</p>
       </div>
