Footer underline - none

--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -13,7 +13,7 @@
               a zajímavé lidi</a>.
           </p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="tm-footer_nav mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
           <h3>Navigace</h3>
           <nav>
             <ul>
