--- a/www.hookamonk.com/src/html/index.html
+++ b/www.hookamonk.com/src/html/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <link rel="stylesheet" href="https://use.typekit.net/luj0tvu.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 
@@ -1037,7 +1038,6 @@
           </ul>
         </nav>
       </div>
-      <hr class="above-footer-line">
       <div class="footer_social-section mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner">
           <div
